--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "reset-css": "^4.0.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "ticketmaster": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
